--- a/style.css
+++ b/style.css
@@ -4,11 +4,14 @@
 /* Css variables */
 
 :root {
+  --clr-accent-500: hsl(12, 60%, 45%);
   --clr-accent-400: hsl(12, 88%, 59%);
+  --clr-accent-300: hsl(12, 88%, 75%);
   --clr-accent-100: hsl(13, 100%, 96%);
 
   --clr-primary-400: hsl(228, 39%, 23%);
 
+  --clr-neutral-100: hsl(0, 0%, 100%);
   --clr-neutral-400: hsl(233, 12%, 13%);
   --clr-neutral-900: hsl(0, 0%, 0%);
 
@@ -34,6 +37,16 @@
   --fs-secondary-heading: var(--fs-700);
   --fs-nav: var(--fs-500);
   --fs-button: var(--fs-300);
+
+  --size-100: .25rem;
+  --size-200: .5rem;
+  --size-300: .75rem;
+  --size-400: 1rem;
+  --size-500: 1.5rem;
+  --size-600: 2rem;
+  --size-700: 3rem;
+  --size-800: 4rem;
+  --size-900: 5rem;
 }
 
 @media (min-width: 50em) {
@@ -192,11 +205,78 @@ svg {
 }
 
 
-/* Base */
-body {
-  font-family: var(--ff-body);
+.container {
+  --max-width: 1110px;
+  --padding: 1rem;
+
+  width: min(var(--max-width), 100% - (var(--padding) * 2));
+  margin-inline: auto;
 }
 
-h1, h2, h3, h4, h5, h6 {
+.padding-block-900 {
+  padding-block: var(--size-900);
+}
+
+.padding-block-700 {
+  padding-block: var(--size-700);
+}
+
+.even-columns {
+  display: grid;
+  gap: 1rem;
+}
+
+
+@media screen and (min-width: 50em) {
+  .even-columns {
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+  }
+}
+
+
+/* General styling */
+body {
+  font-family: var(--ff-body);
+  font-size: var(--fs-body);
+  color: var(--clr-primary-400);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: var(--ff-heading);
+}
+
+.btn {
+  padding: 1.25em 2.5em;
+  border-radius: 100vmax;
+  border: 0;
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-button);
+  cursor: pointer;
+  color: var(--clr-neutral-100);
+  background-color: var(--clr-accent-400);
+  box-shadow: 0 1.125em 1em -1em var(--clr-accent-500);
+  text-decoration: none;
+  transition: 300ms ease;
+}
+
+.btn[data-type="inverted"] {
+  background-color: var(--clr-neutral-100);
+  color: var(--clr-accent-400);
+}
+
+.btn:hover,
+.btn:focus-visible {
+  background-color: var(--clr-accent-300);
+}
+
+.btn[data-type="inverted"]:hover,
+.btn[data-type="inverted"]:focus-visible {
+  background-color: var(--clr-neutral-100);
+  color: var(--clr-accent-300);
 }
