--- a/style.css
+++ b/style.css
@@ -204,6 +204,26 @@ svg {
   font-size: var(--fs-600);
 }
 
+.visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.d-none {
+  display: none;
+}
+
 
 .container {
   --max-width: 1110px;
@@ -251,6 +271,8 @@ h6 {
   font-family: var(--ff-heading);
 }
 
+/* button */
+
 .btn {
   padding: 1.25em 2.5em;
   border-radius: 100vmax;
@@ -280,3 +302,95 @@ h6 {
   background-color: var(--clr-neutral-100);
   color: var(--clr-accent-300);
 }
+
+/* Navigation */
+
+.primary-header {
+  padding-top: var(--size-700);
+}
+
+.primary-header__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.primary-header__btn {
+  display: none;
+}
+
+@media (min-width: 50em) {
+  .primary-header__btn {
+    display: block;
+  }
+}
+
+.mobile-nav-toggle {
+  display: none;
+  position: relative;
+  z-index: 100;
+}
+
+.nav__list {
+  display: grid;
+  grid-auto-flow: column;
+  gap: clamp(var(--size-400), 5vw, var(--size-700));
+}
+
+.nav__list a {
+  text-decoration: none;
+  color: var(--clr-neutral-400);
+  transition: 300ms ease;
+  font-size: var(--fs-nav);
+  font-weight: var(--fw-medium);
+}
+
+.nav__list a:hover,
+.nav__list a:focus {
+  color: var(--clr-accent-400)
+}
+
+@media (max-width: 50em) {
+  .primary-nav {
+    display: none;
+    position: absolute;
+    max-width: 25rem;
+    margin-left: auto;
+    padding: var(--size-700);
+    inset: 7rem var(--size-400) auto;
+    background-color: var(--clr-neutral-100);
+    border-radius: var(--size-100);
+    box-shadow: 0 0 .75em rgba(0, 0, 0, .05)
+  }
+
+  .primary-header[data-overlay]::before {
+    content: '';
+    position: fixed;
+    inset: 0;
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .8));
+  }
+
+  .nav__list {
+    grid-auto-flow: row;
+    text-align: center;
+    gap: var(--size-600);
+  }
+
+  .nav__list a {
+    font-weight: var(--fw-bold);
+  }
+
+  .primary-nav[data-visible] {
+    display: block;
+  }
+
+  .mobile-nav-toggle {
+    display: block;
+    border: 0;
+    background-color: transparent;
+    padding: .5em;
+    cursor: pointer;
+  }
+}
+
+
