--- a/style.css
+++ b/style.css
@@ -278,30 +278,6 @@ svg {
   padding-block: var(--size-700);
 }
 
-.cta {
-  position: relative;
-  isolation: isolate;
-  text-align: center;
-}
-
-@media (min-width: 50em) {
-  .cta {
-    text-align: left;
-  }
-}
-
-.cta::before {
-  content: '';
-  position: absolute;
-  inset: 0;
-  z-index: -1;
-  background-image: url(images/bg-tablet-pattern.svg),
-                    url(images/bg-tablet-pattern.svg);
-  background-repeat: no-repeat;
-  background-position: -15rem 0, 60rem -42rem;
-  opacity: 0.1;
-}
-
 
 /* General styling */
 body {
@@ -326,6 +302,12 @@ h4,
 h5,
 h6 {
   font-family: var(--ff-heading);
+}
+
+input:where([type="text"], [type="email"]) {
+  padding: 1.25em 2.5em;
+  border-radius: 100vmax;
+  border: 0;
 }
 
 /* button */
@@ -360,6 +342,10 @@ h6 {
   color: var(--clr-accent-300);
 }
 
+.btn[data-shadow="none"] {
+  box-shadow: none;
+}
+
 /* Navigation */
 
 .primary-header {
@@ -384,6 +370,8 @@ h6 {
 
 .mobile-nav-toggle {
   display: none;
+  width: 35px;
+  height: 35px;
   position: relative;
   z-index: 100;
 }
@@ -451,4 +439,137 @@ h6 {
   }
 }
 
+/* Footer */
+.primary-footer {
+  --logo-color: var(--clr-accent-100);
+}
 
+.primary-footer__wrapper {
+  display: grid;
+  gap: var(--size-700);
+  grid-template-areas:
+    'form'
+    'nav'
+    'logo-social';
+}
+
+@media (min-width: 50em) {
+  .primary-footer__wrapper {
+    grid-template-areas: 'logo-social nav form';
+    /* grid-auto-columns: 1fr; */
+  }
+}
+
+@media (max-width: 50em) {
+  .primary-footer__wrapper>* {
+    margin-inline: auto;
+  }
+}
+
+.primary-footer__logo-social {
+  grid-area: logo-social;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-between;
+}
+
+@media (max-width: 50em) {
+  .primary-footer__logo-social {
+    align-items: center;
+    gap: var(--size-700);
+    justify-content: flex-start;
+  }
+}
+
+
+.primary-footer__nav {
+  grid-area: nav;
+}
+
+.primary-footer__form {
+  grid-area: form;
+  display: grid;
+  align-content: space-between;
+}
+
+.primary-footer__form form {
+  display: flex;
+  gap: var(--size-200);
+}
+
+.primary-footer__form .btn {
+  padding: 1.25em 1.75em;
+}
+
+@media (max-width: 50em) {
+  .primary-footer__form input {
+    padding: 1.25em 1em;
+  }
+}
+
+/* .primary-footer__copy {
+  text-align: center;
+} */
+
+/* Footer navigation */
+.footer-nav {
+  columns: 2;
+  gap: min(15vw, 2rem);
+}
+
+.footer-nav a {
+  color: var(--clr-neutral-100);
+  text-decoration: none;
+}
+
+.footer-nav a:is(:hover, :focus) {
+  color: var(--clr-accent-400);
+}
+
+/* social list */
+.social-list {
+  display: flex;
+  gap: var(--size-300);
+}
+
+.social-icon {
+  width: var(--size-600);
+  fill: var(--clr-neutral-100);
+  aspect-ratio: 1;
+}
+
+
+.social-list a:is(:hover, :focus) .social-icon {
+  fill: var(--clr-accent-400);
+}
+
+@media (min-width: 50em) {
+  .social-icon {
+    width: var(--size-500);
+  }
+}
+
+
+.cta {
+  position: relative;
+  isolation: isolate;
+  text-align: center;
+}
+
+@media (min-width: 50em) {
+  .cta {
+    text-align: left;
+  }
+}
+
+.cta::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  background-image: url(images/bg-tablet-pattern.svg),
+    url(images/bg-tablet-pattern.svg);
+  background-repeat: no-repeat;
+  background-position: -15rem 0, 60rem -42rem;
+  opacity: 0.1;
+}
