--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   --clr-primary-400: hsl(228, 39%, 23%);
 
   --clr-neutral-100: hsl(0, 0%, 100%);
+  --clr-neutral-200: hsl(0, 0%, 97%);
   --clr-neutral-400: hsl(233, 12%, 13%);
   --clr-neutral-900: hsl(0, 0%, 0%);
 
@@ -656,4 +657,61 @@ p.numbered-items__body {
   background-repeat: no-repeat;
   background-position: -15rem 0, 60rem -42rem;
   opacity: 0.1;
+}
+
+
+.slider {
+  display: flex;
+  column-gap: var(--size-500);
+  list-style-type: none;
+}
+
+.slider>* {
+  width: 100%;
+  flex: 0 0 auto;
+}
+
+.slider li {
+  background-color: var(--clr-neutral-200);
+  margin-block: var(--size-800);
+  padding: 0 var(--size-600) var(--size-600) var(--size-600);
+  border-radius: var(--size-100);
+}
+
+.slider img {
+  position: relative;
+  width: var(--size-800);
+  margin-inline: auto;
+  transform: translateY(-50%);
+}
+
+.a11y-slider-dots {
+  display: flex;
+  justify-content: center;
+  margin-block: 0 var(--size-700);
+  column-gap: var(--size-400);
+}
+
+.a11y-slider-dots li {
+  display: block;
+  width: 12px;
+  height: 12px;
+  padding: 0;
+  color: #fff;
+}
+
+.a11y-slider-dots li button {
+  display: block;
+  font-size: 0;
+  text-indent: -9999px;
+  border: 1px solid var(--clr-accent-400) !important;
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.a11y-slider-dots li button.active {
+  background-color: var(--clr-accent-400);
 }
